Created function to allow multiple people to be text
Utilized the foreach event and the json_decode to pass csv to eztexting
api

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <section class="togglecss">
 <form action="upload8.php" method="post" enctype="multipart/form-data">
     Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
+    <input type="file" name="fileToUpload" id="fileToUpload"><br />
+	<textarea name="messages"></textarea><br/>
     <input type="submit" value="Upload File" name="submit">
 </form>
 
