new  css and subject field
New Css and added subject field and extra message section. Limited
subject field to 13 characters as per eztexting restrictions

--- a/index.html
+++ b/index.html
@@ -23,9 +23,20 @@
     <input type="file" name="fileToUpload" id="fileToUpload" style="display: none;">
 	</label>
 	</div>
+	<!--/ Subject Area -->
+	<div class="col-sm-12 column">
+	 <p class="glyphicon glyphicon-pencil"></p>
+	 <p class="largerfont subject">Subject:</p>
+    <input type="text" name="subjectinput" id="subjectinput" placeholder="Max characters is 13" />
+	</label>
+	</div>
+	
 	<!--/ Message Area -->
 <div class="col-sm-12 column">
-	<span class="brdr glyphicon glyphicon-pencil"><textarea  rows="30"  cols="150" value="" class="form-control" name="messages" placeholder="Enter or paste message here:"></textarea></span>
+	<span class="brdr glyphicon glyphicon-pencil"><textarea  id="message" rows="30"  cols="150" value="" class="form-control" name="messages" placeholder="Enter or paste message here:"></textarea></span>
+	</div>
+	<div class="col-sm-12 column">
+	<span class="brdr glyphicon glyphicon-pencil"><textarea  id="xtramsg" rows="10"  cols="75" value="" class="form-control" name="xtramsg" placeholder="Enter or paste additional message here:"></textarea></span>
 	</div>
 	<!--/ Submit Text Message -->
 	<div class="col-sm-12 column">
