Added logic to handle missing numbers
Added logic to handle missing numbers and formatted the phone numbers to
remove space ( ) and -

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>CSS Toggle Switch</title>
+<title>CSV To JSON</title>
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
    
@@ -19,7 +19,7 @@
 <!--/ Select Button for CSV File -->
 <div class="col-sm-12 column">
 	 <p class="glyphicon glyphicon-circle-arrow-right"></p><label class="btn btn-danger btn-file">
-	<p class="largerfont">Select CSV File to upload:</p>
+	<p class="largerfont">Select File to upload:</p>
     <input type="file" name="fileToUpload" id="fileToUpload" style="display: none;">
 	</label>
 	</div>
